--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     src="//f00.esfr.pl/si_upload/blank_gif/blank.gif"
                     data-original="./img/advantages.png"
                     alt=""
+                    class="lazy"
                   />
                 </div>
                 <div class="es-slider__texts">
